--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ CONFIG_FILE=config.yaml
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=evm_tracker
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/evm_tracker"
+DB_PASSWORD=password
+DB_NAME=dbname
+DATABASE_URL="postgresql://postgres:passwrod@localhost:5432/dbname"
 
 # 邮件通知配置
-EMAIL_ENABLED=true
+EMAIL_ENABLED=false
 SMTP_SERVER=smtp.example.com
 SMTP_PORT=587
 SMTP_USER=your_email@example.com
@@ -21,10 +21,10 @@ SMTP_PASSWORD=your_email_password
 EMAIL_SENDER=your_email@example.com
 EMAIL_RECIPIENTS=admin@example.com,alerts@example.com
 
-# Telegram通知配置
+# Telegram通知配置（作为备用）
 TELEGRAM_ENABLED=true
-TELEGRAM_TOKEN=7638015275:AAGuzFYTwgiihQ5iIrYXNJA-JE1ZPvGPWr4
-TELEGRAM_CHAT_IDS=2006080530,-1002615732272
+TELEGRAM_TOKEN=your_telegram_bot_token
+TELEGRAM_CHAT_IDS=your_chat_ids
 
 # 服务检查配置
 SERVICE_CHECKS_ENABLED=true
@@ -35,4 +35,4 @@ SYSTEM_MONITORING_ENABLED=true
 SYSTEM_MONITORING_INTERVAL=5
 CPU_THRESHOLD=80
 MEMORY_THRESHOLD=80
-DISK_THRESHOLD=85 
+DISK_THRESHOLD=80 
