--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,29 @@
-psycopg2-binary==2.9.5
-pyyaml==6.0
-schedule==1.1.0
-python-telegram-bot==13.14
-requests==2.28.2
-apscheduler==3.6.3
-psutil==5.9.4
-flask==2.2.3
+APScheduler==3.6.3
+cachetools==4.2.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+Flask==2.2.3
+greenlet==3.2.0
+gunicorn==23.0.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==24.2
 prometheus-client==0.16.0
+psutil==5.9.4
+psycopg2-binary==2.9.5
+python-dotenv==1.0.0
+python-telegram-bot==13.14
+pytz==2025.2
+PyYAML==6.0
+requests==2.28.2
+schedule==1.1.0
+six==1.17.0
 SQLAlchemy==2.0.4
-python-dotenv==1.0.0 
+tornado==6.1
+typing_extensions==4.13.2
+tzlocal==5.3.1
+urllib3==1.26.20
+Werkzeug==2.3.8
